kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      serviceAccountName: monitoring
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: config-volume
          configMap:
            name: homework-configmap
      containers:
        - name: main-container
          image: python:3.9-slim
          command:
            - sh
            - -c
            - >
              python3 -m http.server 8000 --bind 0.0.0.0 --directory /homework;
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
            - name: config-volume
              mountPath: /homework/conf
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command:
                - sh
                - -c
                - >
                  echo "Deleting index.html" &&
                  rm -f /homework/index.html;
      terminationGracePeriodSeconds: 30
