kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homework
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: homework-service
            port:
              number: 80
